redis set 共同关注
