# api/点评项目.openapi.json
@@ -330,6 +330,45 @@
         ]
       }
     },
+    "/user/{id}": {
+      "get": {
+        "summary": "查询其他用户信息",
+        "deprecated": false,
+        "description": "",
+        "tags": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "example": "1",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
     "/voucher/seckill": {
       "post": {
         "summary": "添加秒杀券",
@@ -541,6 +580,55 @@
         ]
       }
     },
+    "/blog/of/user": {
+      "get": {
+        "summary": "查看用户的点评",
+        "deprecated": false,
+        "description": "",
+        "tags": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "example": "1",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "current",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "example": "1",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
     "/follow/or/not/{id}": {
       "get": {
         "summary": "查看是否关注",
@@ -580,7 +668,7 @@
         ]
       }
     },
-    "/follow/1/{isFollow}": {
+    "/follow/{id}/{isFollow}": {
       "put": {
         "summary": "关注取关",
         "deprecated": false,
@@ -588,11 +676,60 @@
         "tags": [],
         "parameters": [
           {
+            "name": "id",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "example": "1",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "isFollow",
             "in": "path",
             "description": "",
             "required": true,
             "example": "true",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/follow/common/{id}": {
+      "get": {
+        "summary": "共同关注",
+        "deprecated": false,
+        "description": "",
+        "tags": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "example": "1010",
             "schema": {
               "type": "string"
             }
