# hm-dianping/src/main/java/com/hmdp/controller/BlogController.java
@@ -75,4 +75,16 @@ public class BlogController {
     public Result queryById(@PathVariable("id") Long id) {
         return blogService.queryBlogById(id);
     }
+
+    @GetMapping("/of/user")
+    public Result queryBlogByUserId(
+            @RequestParam(value = "current", defaultValue = "1") Integer current,
+            @RequestParam("id") Long id) {
+        // 根据用户查询
+        Page<Blog> page = blogService.query()
+                .eq("user_id", id).page(new Page<>(current, SystemConstants.MAX_PAGE_SIZE));
+        // 获取当前页数据
+        List<Blog> records = page.getRecords();
+        return Result.ok(records);
+    }
 }
