# hm-dianping/src/main/java/com/hmdp/controller/FollowController.java
@@ -29,4 +29,9 @@ public class FollowController {
     public Result follow(@PathVariable("id") Long followUserId) {
         return followService.isFollow(followUserId);
     }
+    // 共同关注
+    @GetMapping("/common/{id}")
+    public Result followCommons(@PathVariable("id") Long id) {
+        return followService.followCommons(id);
+    }
 }
